--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@ body{
 }
 
 /********************** NAV BAR *******************************************/
+.logo{
+	width: 30px;
+}
 .navbar-inverse{
 	background-color: #42CAFD;
 	border-color: #42CAFD;
@@ -26,7 +29,7 @@ body{
 	width: 100%;
 }
 .nav-item{
-	width: 32%;
+	width: 33.3%;
 	text-align: center;
 }
 .navbar-inverse .navbar-nav>li>a{
@@ -45,24 +48,28 @@ body{
 
 .hero{
 	margin-top: 51px;
-	height: 550px;
+	height: 570px;
 	background-image: url("images/dressing-stack.jpg");
 	background-position: center;
 	background-size: cover;
 }
 .overlay{
-	background-color: rgba(0,0,0,.4);
-	height: 550px;
+	background-color: rgba(0,0,0,.6);
+	height: 570px;
 }
 .title{
 	text-align: center;
-	padding-top: 140px;
+	padding-top: 70px;
 	color: white;
+}
+.homepage-image{
+	width: 150px;
+	padding-bottom: 20px;
 }
 h1{
 	font-size: 76px;
 	font-weight: bold;
-	padding-bottom: 50px;
+	padding-bottom: 30px;
 }
 
 /*media queries for this section*/
@@ -297,7 +304,8 @@ p{
 	background-image: url("images/chefing-dressing.jpg");
 	background-position: center;
 	background-size: cover;
-	height: 300px;
+	height: 330px;
+	margin-bottom: 20px;
 }
 
 @media screen and (max-width: 510px){
