--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,12 @@ h1{
 	}
 }
 
+@media screen and (max-width: 680px){
+	.title{
+		padding-top: 30px;
+	}
+}
+
 @media screen and (max-width: 585px){
 	h1{
 		font-size: 64px;
@@ -92,11 +98,14 @@ h1{
 	h2{
 		font-size: 20px;
 	}
+	.homepage-image{
+		width: 130px;
+	}
 }
 
 @media screen and (max-width: 400px){
 	.title{
-		padding-top: 50px;
+		padding-top: 10px;
 	}
 	h1{
 		font-size: 60px;
