--- a/styles.css
+++ b/styles.css
@@ -6,106 +6,91 @@ body{
 }
 
 /********************** NAV BAR *******************************************/
+.navbar-default{
+	background-color: #42CAFD;
+	border-color: #42CAFD;
+}
+.navbar{
+	border-radius: 0;
+	margin-bottom: 0;
+}
 .logo{
-	width: 30px;
+	width: 50px;
 }
-.navbar-inverse{
-	background-color: #42CAFD;
-	border-color: #42CAFD;
-}
-.navbar-inverse .navbar-toggle{
-	border-color: #42CAFD;
-}
-.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form{
-	border-color: #42CAFD;
-}
-.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover{
-	background-color: white;
-}
-.navbar-inverse .navbar-toggle:hover .icon-bar, .navbar-inverse .navbar-toggle:focus .icon-bar{
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover{
 	background-color: #42CAFD;
 }
-.nav{
-	width: 100%;
-}
-.nav-item{
-	width: 33.3%;
-	text-align: center;
-}
-.navbar-inverse .navbar-nav>li>a{
+.navbar-default .navbar-nav>li>a{
 	color: white;
 }
-.navbar-inverse .navbar-nav>li>a:hover{
-	color: #216869;
-}
-.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover{
-	color: #216869;
-	background-color: #42CAFD;
+.active{
 	text-decoration: underline;
 }
-
 /********************** HERO IMAGE *******************************************/
-
+.green{
+	color: #66AE79;
+}
 .hero{
-	margin-top: 51px;
-	height: 570px;
-	background-image: url("images/dressing-stack.jpg");
+	height: 600px;
+	background-image: url("images/salad-dressing.jpg");
 	background-position: center;
 	background-size: cover;
 }
 .overlay{
-	background-color: rgba(0,0,0,.6);
-	height: 570px;
+	background-color: rgba(0,0,0,.7);
+	height: 600px;
 }
 .title{
 	text-align: center;
-	padding-top: 70px;
+	padding-top: 80px;
 	color: white;
 }
 .homepage-image{
-	width: 150px;
+	width: 120px;
 	padding-bottom: 20px;
+	padding-top: 40px;
 }
 h1{
-	font-size: 76px;
+	font-size: 78px;
 	font-weight: bold;
+}
+h4{
+	font-size: 24px;
+}
+h2, h4{
 	padding-bottom: 30px;
 }
-
 /*media queries for this section*/
 
 @media screen and (max-width: 760px){
 	h1{
-		font-size: 70px;
+		font-size: 75px;
 	}
 
-	h2{
-		font-size: 24px;
-	}
 }
 
 @media screen and (max-width: 680px){
 	.title{
-		padding-top: 30px;
+		padding-top: 55px;
 	}
 }
 
 @media screen and (max-width: 585px){
 	h1{
-		font-size: 64px;
+		font-size: 70px;
 	}
 
 	h2{
-		font-size: 20px;
+		font-size: 22px;
 	}
-	.homepage-image{
-		width: 130px;
+	.title{
+		padding-top: 70px;
 	}
 }
 
 @media screen and (max-width: 400px){
 	.title{
-		padding-top: 10px;
+		padding-top: 70px;
 	}
 	h1{
 		font-size: 60px;
@@ -115,7 +100,50 @@ h1{
 		font-size: 20px;
 	}
 }
+/********************* TEAM SECTION *******************************/
+.team-member{
+	width: 80%;
+}
+.the-team h4{
+	color: #66AE79;
+	padding-bottom: 0;
+}
 
+.team-member-col{
+	height: 450px;
+	text-align: center;
+	margin-bottom: 50px;
+	background-color: white;
+}
+.bold{
+	font-weight: bold;
+}
+@media screen and (max-width: 990px){
+	.team-member-col{
+		width: 49%;
+		display: inline-block;
+		height: 450px;
+	}
+}
+@media screen and (max-width: 700px){
+	.team-member-col{
+		height: 400px;
+	}
+}
+@media screen and (max-width: 550px){
+	.team-member-col{
+		width: 100%;
+		height: 480px;
+	}
+	h3{
+		text-align: center;
+	}
+}
+@media screen and (max-width: 550px){
+	.team-member-col{
+		height: 440px;
+	}
+}
 /******************** BUTTON ICONS ********************************/
 
 .button-list{
@@ -131,9 +159,18 @@ h1{
 	margin-right: 20px;
 	color: white;
 }
+.btn-green:hover{
+	color: white;
+	cursor: default;
+}
+.btn-blue:hover{
+	color: white;
+	cursor: default;
+}
 .btn-green{
 	background-color: #216869;
 	margin-top: 15px;
+	border-color: #216869;
 }
 .btn-blue{
 	background-color: #66AE79;
@@ -167,6 +204,15 @@ h1{
 	padding: 15px 40px;
 	margin: 30px auto;
 }
+.btn-social-icon{
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-right: 0;
+	margin-left: 0;
+}
+.btn-facebook{
+	margin-left: 40px;
+}
 /*media queries for this section*/
 
 @media screen and (max-width: 555px){
@@ -195,13 +241,15 @@ h1{
 	}
 }
 /***************************** BIG IMAGE ABOUT ************************/
-
+.who-we-are-text{
+	padding-bottom: 50px;
+}
 .about-hero{
 	margin-top: 51px;
 }
 .big-image{
 	width: 100%;
-	height: 400px;
+	height: 550px;
 	margin: 30px auto;
 	background-image: url("images/dressing-stack.jpg");
 	background-position: center;
@@ -219,28 +267,37 @@ p{
 }
 .small-image{
 	display: inline-block;
-	width: 40%;
+	width: 45%;
 	height: 300px;
-	background-image: url("images/dressing-stack.jpg");
 	background-position: center;
 	background-size: cover;
 	margin-top: 20px;
 	margin-bottom: 20px;
+}
+.small-image-solution{
+	background-image: url("images/dressing-packet.jpg");
+}
+.small-image-mission{
+	background-image: url("images/cutting-dill.jpg");
 }
 .small-image-hidden{
 	display: none;
 }
 .about-text{
 	display: inline-block;
-	width: 50%;
+	width: 45%;
 	vertical-align: top;
 	/*border: 5px solid #66AE79;*/
+	margin-top: 50px;
 }
 .about-text-one{
 	margin-left: 30px;
 }
 .about-text-two{
 	margin-right: 30px;
+}
+.the-solution{
+	background-color: #B3EAFF;
 }
 /* media queries for this section */
 @media screen and (max-width: 995px){
@@ -272,7 +329,7 @@ p{
 		display: none;
 	}
 	.about-text{
-		width: 90%;
+		width: 100%;
 		margin-left: 0px;
 		margin-right: 0px;
 		text-align: center;
@@ -310,11 +367,8 @@ p{
 }
 .dressing-row-image{
 	margin-top: 50px;
-	background-image: url("images/chefing-dressing.jpg");
-	background-position: center;
-	background-size: cover;
-	height: 330px;
 	margin-bottom: 20px;
+	text-align: center;
 }
 
 @media screen and (max-width: 510px){
