changed the fonts on the ingredients

--- a/styles.css
+++ b/styles.css
@@ -396,7 +396,8 @@ p{
 	width: 45%;
 	vertical-align: top;
 	/*border: 5px solid #66AE79;*/
-	margin-top: 50px;
+	margin-top: 40px;
+	margin-bottom: 15px;
 }
 .about-text-one{
 	margin-left: 30px;
@@ -413,7 +414,7 @@ p{
 		width: 400px;
 	}
 	.about-text{
-		margin-top: 30px;
+		margin-top: 20px;
 	}
 }
 @media screen and (max-width: 995px){
@@ -491,6 +492,10 @@ p{
 	width: 70%;
 	margin: 0 auto;
 	padding-bottom: 30px;
+}
+.ingredients-fonts{
+	font-size: 16px;
+	font-style: italic;
 }
 .dressing-buttons{
 	width: 80%;
