--- a/styles.css
+++ b/styles.css
@@ -367,7 +367,7 @@ i{
 	width: 100%;
 	height: 550px;
 	margin: 30px auto;
-	background-image: url("images/dressing-stack.jpg");
+	background-image: url("images/ovh.jpg");
 	background-position: center;
 	background-size: cover;
 }
@@ -439,6 +439,9 @@ p{
 	h3{
 		font-size: 36px;
 	}
+	.big-image{
+		height: 400px;
+	}
 }
 
 @media screen and (max-width: 650px){
@@ -469,6 +472,9 @@ p{
 @media screen and (max-width: 450px){
 	.small-image{
 		width: 300px;
+	}
+	.big-image{
+		height: 300px;
 	}
 }
 @media screen and (max-width: 350px){
